Efficiently mark multiple words in a page.

*This extension is open-source. Welcome to make any contribution or comment.

20190503:
- Minimize extension size

20190110:
- Highlight any strings (not just full word)
- Add Instant Search (highlight on-the-fly)
- Add customizable delimiter
- Make Highlight Words individual to each tab
- UI changes
- Add Ctrl+Shift+F as default shortcut

20181231:
- Organize code
- Change UI (based on Multi-Highlight)
- Change extension icon